# car_simulator

./: Basic_Values.h  CMakeLists.txt  Car.cpp  Car.h  CarGen.cpp  CarGen.h  CarGenTest.cpp  CarTest.cpp  Car_SimDomainTest.cpp  Car_SimUtils.cpp  Car_SimUtils.h  Car_sim.txt  DesignByContract.h  Functions.cpp  Functions.h  Input.cpp  Input.h  Light.cpp  Light.h  LightTest.cpp  Road.cpp  Road.h  RoadTest.cpp  TestMain.cpp  World.cpp  World.h  WorldTest.cpp  example.cpp  main.cpp
Classes/: BusStop.cpp  BusStop.h  Car.cpp  Car.h  CarData.cpp  CarData.h  CarGen.cpp  CarGen.h  Clock.cpp  Clock.h  Junction.cpp  Junction.h  Light.cpp  Light.h  Place.cpp  Place.h  Road.cpp  Road.h  World.cpp  World.h
Exception/: ParserException.h
Simulation/: General  GenerateIni.cpp  GenerateIni.h  ambulance  auto  brandweer  bugatti  bus  busstop  lightgreen  lightorange  lightred  politiewagen  road  temp
Simulation/figures/: ambulance.ini  auto.ini  brandweerwagen.ini  bugatti.ini  bus.ini  filelist  lightgreen.ini  politiewagen.ini
Test/: BusStopDomainTest.cpp  CarDomainTest.cpp  CarGenDomainTest.cpp  CarGenTest.cpp  CarTest.cpp  Car_SimDomainTest.cpp  Car_SimInputTest.cpp  Car_SimOutputTest.cpp  JunctionDomainTest.cpp  LightDomainTest.cpp  LightOutputTest.cpp  LightTest.cpp  RoadDomainTest.cpp  RoadTest.cpp  WorldDomainTest.cpp  WorldTest.cpp
XML/: Case2.xml  bugattiVScar.xml  case1.xml  case2.xml  case3.xml
outputFile/: Car_sim.txt  Car_sim2.txt  error.txt
outputFile/Ini/: filelist  sim0001.ini  sim0002.ini  sim0003.ini  sim0004.ini  sim0005.ini
testInput/: testCase1.xml  testCase2.xml  testCase3.xml  testCase4.xml  testCase5.xml  testCase6.xml  testFail1.xml  testFail10.xml  testFail11.xml  testFail12.xml  testFail13.xml  testFail2.xml  testFail3.xml  testFail4.xml  testFail5.xml  testFail6.xml  testFail7.xml  testFail8.xml  testFail9.xml
testOutput/: LightFail1.txt  testFail1.txt  testFail10.txt  testFail11.txt  testFail12.txt  testFail13.txt  testFail2.txt  testFail3.txt  testFail4.txt  testFail5.txt  testFail6.txt  testFail7.txt  testFail8.txt  testOutput1.0.txt  testOutput1.txt  testOutput2.0.txt  testOutput2.txt  testOutput3.txt
